Enable contact and change background colour

--- a/config.yaml
+++ b/config.yaml
@@ -71,7 +71,7 @@ params:
 
   theme:
     # disableThemeToggle: true
-    # defaultTheme: "light" # dark
+    defaultTheme: "dark" # dark
 
   font:
     fontSize: 1rem # default: 1rem
@@ -80,10 +80,10 @@ params:
     textAlign: left # default: left
 
   # color preference
-  # color:
+  color:
   #   textColor:
   #   secondaryTextColor:
-  #   backgroundColor:
+     backgroundColor: "#18191a"
   #   secondaryBackgroundColor:
   #   primaryColor:
   #   secondaryColor:
@@ -108,7 +108,7 @@ params:
       disableEducation: true
       disableProjects: true
       disableAchievements: true
-      disableContact: true
+      disableContact: false
 
   # Hero
   hero:
@@ -339,9 +339,9 @@ params:
   contact:
     enable: true
     # title: "Custom Name"
-    content: My inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!
-    email: gurusabarisha@gmail.com
-    btnName: Mail me
+    content: "Get in touch with me! Even if you would just like to send me your worst dad joke"
+    email: hello@harein.com
+    btnName: hello@harein.com
 
   footer:
     recentPosts:
