--- a/config.yaml
+++ b/config.yaml
@@ -70,7 +70,7 @@ params:
   animate: true
 
   theme:
-    # disableThemeToggle: true
+    disableThemeToggle: true
     defaultTheme: "dark" # dark
 
   font:
