--- a/config.yaml
+++ b/config.yaml
@@ -14,6 +14,9 @@ outputs:
     
 Paginate: 3
 enableRobotsTXT: true
+# disqusShortname: your-disqus-shortname
+# googleAnalytics: G-MEASUREMENT_ID
+
 
 markup:
   goldmark:
