--- a/config.yaml
+++ b/config.yaml
@@ -347,11 +347,12 @@ params:
     btnName: hello@harein.com
 
   footer:
+  enable: false
     recentPosts:
       path: "blogs"
       count: 3
       title: Recent Posts
-      enable: true
+      enable: false
       disableFeaturedImage: false
     socialNetworks:
       github: https://github.com
