--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-profile"]
 	path = themes/hugo-profile
 	url = https://github.com/gurusabarish/hugo-profile.git
+[submodule "themes/hugo-profile/layouts/partials/gtm-hugo"]
+	path = themes/hugo-profile/layouts/partials/gtm-hugo
+	url = https://github.com/henkisdabro/GTM-integration-Hugo
