--- a/config.yaml
+++ b/config.yaml
@@ -367,7 +367,7 @@ params:
   # Henrik's GTM Params
 
   # Google Tag Manager Container Details
-  gtm_id: GTM-TVZ5WJN      # enter GTM container ID in format "GTM-XXXXXX". This value is invalidated and redundant if the 'override_container_id' parameter below is set to true
+  gtm_id: "GTM-TVZ5WJN"      # enter GTM container ID in format "GTM-XXXXXX". This value is invalidated and redundant if the 'override_container_id' parameter below is set to true
   gtm_datalayer: basic     # set to "basic" to push page metadata into the dataLayer upon page load. Set to other value or blank to disable.
 
   # OPTIONAL - Server-side GTM Settings
